Initial action support

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -3,7 +3,8 @@
     <head>
         <script src="node_modules/adaptivecards/dist/adaptivecards.js"></script>
         <script src="dist/adaptivecards-designer.js"></script>
-
+        <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
+    
         <link rel="stylesheet" href="css/app.css" type="text/css" />
         <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
         <link rel="stylesheet" href="css/outlook.css" type="text/css" />
