--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -11,10 +11,10 @@
     </head>
     <body>
         <div style="display: flex; height: 100%;">
-            <div id="designerHost" style="flex: 1 0 450px; padding: 10px; overflow: auto;"></div>
-            <!--
-            <button id="deleteSelected">Delete selected</button>
-            -->
+            <div style="flex: 1 0 450px; padding: 10px; overflow: auto;">
+                <div id="designerHost"></div>
+                <div id="commandsHost"></div>
+            </div>
             <div style="flex: 1 1 100%; height: 100%; overflow: auto; padding: 10px;">
                 <div id="propertySheetHost" style="width: 100%;"></div>
             </div>
