Drag and drop within card fully working

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -17,6 +17,7 @@
                 <div id="status2"></div>
                 <div id="status3"></div>
                 <div id="status4"></div>
+                <div id="status5"></div>
                 <div id="commandsHost"></div>
             </div>
             <div style="flex: 1 1 100%; height: 100%; overflow: auto; padding: 10px;">
