--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -11,6 +11,10 @@
     </head>
     <body>
         <div style="display: flex; height: 100%;">
+            <div style="flex: 1 0 100px;">
+                <div id="toolPalette"></div>
+                <div id="paletteStatus"></div>
+            </div>
             <div style="flex: 1 0 450px; padding: 10px; overflow: auto;">
                 <div id="designerHost"></div>
                 <div id="status"></div>
