Add initial support for adding new elements via d&d from tool palette Won't work for some element types for now

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -14,6 +14,7 @@
             <div style="flex: 1 0 100px;">
                 <div id="toolPalette"></div>
                 <div id="paletteStatus"></div>
+                <div id="paletteStatus2"></div>
             </div>
             <div style="flex: 1 0 450px; padding: 10px; overflow: auto;">
                 <div id="designerHost"></div>
