Add support for designing inline cards Plus make inline card bleeding algorithm more robust

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -11,10 +11,11 @@
     </head>
     <body>
         <div style="display: flex; height: 100%;">
-            <div style="flex: 1 0 100px;">
+            <div style="flex: 1 0 150px;">
                 <div id="toolPalette"></div>
                 <div id="paletteStatus"></div>
                 <div id="paletteStatus2"></div>
+                <button id="btnUpdateLayout">Update layout</button>
             </div>
             <div style="flex: 1 0 450px; padding: 10px; overflow: auto;">
                 <div id="designerHost"></div>
