Add initial support for command buttons when peer is selected Fine tune drag and drop

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -13,14 +13,11 @@
         <div style="display: flex; height: 100%;">
             <div style="flex: 1 0 150px;">
                 <div id="toolPalette"></div>
-                <div id="paletteStatus"></div>
-                <div id="paletteStatus2"></div>
-                <button id="btnUpdateLayout">Update layout</button>
             </div>
             <div style="flex: 1 0 450px; padding: 10px; overflow: auto;">
                 <div id="designerHost"></div>
-                <div id="status"></div>
-                <div id="commandsHost"></div>
+                <div id="windowMouseMoveStatus"></div>
+                <div id="isOverDesignerStatus"></div>
             </div>
             <div style="flex: 1 1 100%; height: 100%; overflow: auto; padding: 10px;">
                 <div id="propertySheetHost" style="width: 100%;"></div>
