Fix broken drag and drop in Firefox Bug fixes

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -18,10 +18,10 @@
                 <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #EEEEEE; overflow-y: auto;">
                     <div id="toolPalette"></div>
                 </div>
-                <div style="flex: 1 1 100%; padding: 10px; overflow: auto; background-color: #F6F6F6;">
+                <div style="flex: 1 1 70%; padding: 10px; overflow: auto; background-color: #F6F6F6;">
                     <div id="designerHost"></div>
                 </div>
-                <div style="flex: 0 0 450px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #EEEEEE;">
+                <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #EEEEEE;">
                     <div id="propertySheetHost" style="width: 100%;"></div>
                 </div>
             </div>
