Add Skype container Some cleanup/file renames

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <div style="display: flex; flex-direction: column; height: 100%;">
-            <div id="toolbar" style="flex: 0 0 auto; padding: 8px; background-color: #666666; display: flex; align-items: center;">
+            <div id="toolbar" style="flex: 0 0 auto; padding: 8px; background-color: #0078D7; display: flex; align-items: center;">
+                <img src="./assets/adaptive-card-50.png" style="flex: 0 0 40px; height: 40px; margin-right: 110px;"/>
                 <span style="color: white;">Host:</span>
                 <div id="containerPickerHost" style="flex: 0 0 250px; margin-left: 8px;"></div>
             </div>
