--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -18,18 +18,19 @@
                 <span style="color: white;">Host:</span>
                 <div id="containerPickerHost" style="flex: 0 0 250px; margin-left: 8px;"></div>
             </div>
-            <div style="display: flex; flex: 1 1 100%; overflow-y: hidden;">
+            <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
                 <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #EEEEEE; overflow-y: auto;">
                     <div id="toolPalette"></div>
                 </div>
-                <div style="flex: 1 1 70%; padding: 10px; overflow: auto; background-color: #F6F6F6;">
+                <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
                     <div id="designerHost"></div>
                 </div>
                 <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #EEEEEE;">
                     <div id="propertySheetHost" style="width: 100%;"></div>
                 </div>
             </div>
-            <div id="jsonEditorHost" style="flex: 0 0 300px; border-top: 1px solid #EEEEEE; overflow: hidden;"></div>
+            <div id="horizontalSplitter" style="height: 8px; background-color: #EEEEEE; cursor: ns-resize;"></div>
+            <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #EEEEEE; overflow: hidden;"></div>
         </div>
     </body>
 </html>
