--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -29,7 +29,7 @@
                     <div id="propertySheetHost" style="width: 100%;"></div>
                 </div>
             </div>
-            <div id="horizontalSplitter" style="height: 8px; background-color: #EEEEEE; cursor: ns-resize;"></div>
+            <div id="horizontalSplitter" style="flex: 0 0 8px; background-color: #EEEEEE; cursor: ns-resize;"></div>
             <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #EEEEEE; overflow: hidden;"></div>
         </div>
     </body>
