Re-adding Monaco files

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="dist/adaptivecards-designer.js"></script>
         <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
     
-        <script src="src/monaco-editor/min/vs/loader.js"></script>
-        <script src="src/monaco-loader.js"></script>
+        <script src="dist/adaptivecards-designer.js"></script>
+        <script src="dist/monaco-editor/min/vs/loader.js"></script>
+        <script src="dist/monaco-loader.js"></script>
     
         <link rel="stylesheet" href="css/app.css" type="text/css" />
         <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
