Move Monaco files out of dist...

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -3,10 +3,11 @@
     <head>
         <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
     
-        <script src="dist/adaptivecards-designer.js"></script>
-        <script src="dist/monaco-editor/min/vs/loader.js"></script>
-        <script src="dist/monaco-loader.js"></script>
+        <script src="editor/monaco/min/vs/loader.js"></script>
+        <script src="editor/monaco-loader.js"></script>
     
+        <script src="dist/adaptivecards-designer.js"></script>
+
         <link rel="stylesheet" href="css/app.css" type="text/css" />
         <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
         <link rel="stylesheet" href="css/adaptivecards-controls.css" type="text/css"/>
