Add basic keyboard support Fix a couple bugs

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -31,7 +31,9 @@
                 </div>
             </div>
             <div id="horizontalSplitter" style="flex: 0 0 8px; background-color: #EEEEEE; cursor: ns-resize;"></div>
-            <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #EEEEEE; overflow: hidden;"></div>
+            <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #EEEEEE; overflow: hidden;">
+                <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>                
+            </div>
         </div>
     </body>
 </html>
