--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -25,6 +25,7 @@
                 </div>
                 <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
                     <div id="designerHost"></div>
+                    <div style="font-family: FabricMDL2Icons;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</div>
                 </div>
                 <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #EEEEEE;">
                     <div id="propertySheetHost" style="width: 100%;"></div>
