--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Adaptive Cards Designer (preview)</title>
         <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
     
         <script src="editor/monaco/min/vs/loader.js"></script>
@@ -14,24 +15,28 @@
     </head>
     <body>
         <div style="display: flex; flex-direction: column; height: 100%;">
-            <div id="toolbar" style="flex: 0 0 auto; padding: 8px; background-color: #0078D7; display: flex; align-items: center;">
-                <img src="./assets/adaptive-card-50.png" style="flex: 0 0 40px; height: 40px; margin-right: 110px;"/>
-                <span style="color: white;">Host:</span>
-                <div id="containerPickerHost" style="flex: 0 0 250px; margin-left: 8px;"></div>
+            <div id="header" style="flex: 0 0 auto; background-color: black; display: flex; align-items: center;">
+                <img src="./assets/adaptive-card-square-150.png" style="flex: 0 0 48px; height: 48px; margin-right: 20px;"/>
+                <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
+            </div>
+            <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2; padding: 0 20px 0 20px;">
+                <span style="color: black;">Host:</span>
+                <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
+                <div id="btnNewCard" class="toolbar-button toolbar-icon-card" title="Start a new card from scratch">New card</div>
             </div>
             <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
-                <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #EEEEEE; overflow-y: auto;">
+                <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto;">
                     <div id="toolPalette"></div>
                 </div>
                 <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
                     <div id="designerHost"></div>
                 </div>
-                <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #EEEEEE;">
+                <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #D2D2D2;">
                     <div id="propertySheetHost" style="width: 100%;"></div>
                 </div>
             </div>
-            <div id="horizontalSplitter" style="flex: 0 0 8px; background-color: #EEEEEE; cursor: ns-resize;"></div>
-            <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #EEEEEE; overflow: hidden;">
+            <div id="horizontalSplitter" style="flex: 0 0 8px; background-color: #D2D2D2; cursor: ns-resize;"></div>
+            <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #D2D2D2; overflow: hidden;">
                 <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>                
             </div>
         </div>
