Fix drag/drop when designer is scrolled Some cleanup

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -29,7 +29,7 @@
                     <div id="toolPalette"></div>
                 </div>
                 <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
-                    <div id="designerHost"></div>
+                    <div id="designerHost" style="margin: 10px 30px 30px 10px;"></div>
                 </div>
                 <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #D2D2D2;">
                     <div id="propertySheetHost" style="width: 100%;"></div>
