--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -28,16 +28,24 @@
                 <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto;">
                     <div id="toolPalette"></div>
                 </div>
-                <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
-                    <div id="designerHost" style="margin: 10px 30px 30px 10px;"></div>
+
+                <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
+                    <div style="display: flex; flex: 1 1 100%; overflow: auto;">
+                        <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
+                            <div id="designerHost" style="margin: 10px 30px 30px 10px;"></div>
+                        </div>
+                        <div id="verticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
+                        <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
+                        <!--
+                            <div id="propertySheetHost" style="width: 100%;"></div>
+                        </div>
+                        -->
+                    </div>
+                    <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
+                    <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
+                        <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>                
+                    </div>
                 </div>
-                <div style="flex: 0 0 30%; min-width: 360px; height: 100%; overflow: auto; padding: 10px; border-left: 1px solid #D2D2D2;">
-                    <div id="propertySheetHost" style="width: 100%;"></div>
-                </div>
-            </div>
-            <div id="horizontalSplitter" style="flex: 0 0 8px; background-color: #D2D2D2; cursor: ns-resize;"></div>
-            <div id="jsonEditorHost" style="flex: 0 0 auto; height: 300px; border-top: 1px solid #D2D2D2; overflow: hidden;">
-                <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>                
             </div>
         </div>
     </body>
