--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -10,6 +10,7 @@
         <script src="dist/adaptivecards-designer.js"></script>
 
         <link rel="stylesheet" href="css/app.css" type="text/css" />
+        <link rel="stylesheet" href="css/adaptivecards-default.css" type="text/css" />
         <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
         <link rel="stylesheet" href="css/adaptivecards-controls.css" type="text/css"/>
     </head>
@@ -36,10 +37,6 @@
                         </div>
                         <div id="verticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
                         <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
-                        <!--
-                            <div id="propertySheetHost" style="width: 100%;"></div>
-                        </div>
-                        -->
                     </div>
                     <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
                     <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
