Add Teams containers Add way to easily style buttons on top of emphasis container

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -32,7 +32,7 @@
 
                 <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
                     <div style="display: flex; flex: 1 1 100%; overflow: auto;">
-                        <div style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
+                        <div id="designerBackground" style="flex: 1 1 70%; padding: 10px 40px 10px 10px; overflow: auto; background-color: #F6F6F6;">
                             <div id="designerHost" style="margin: 10px 30px 30px 10px;"></div>
                         </div>
                         <div id="verticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
