Add initial support for snippets

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -31,8 +31,8 @@
                 </div>
 
                 <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
-                    <div style="display: flex; flex: 1 1 100%; overflow: auto;">
-                        <div id="designerBackground" style="flex: 1 1 70%; background-color: #F6F6F6; display: flex; flex-direction: column;">
+                    <div style="display: flex; flex: 1 1 100%; overflow: hidden;">
+                        <div id="designerBackground" style="flex: 1 1 70%; background-color: #F6F6F6; display: flex; flex-direction: column; overflow: auto;">
                             <div style="flex: 1 1 100%; overflow: auto;">
                                 <div id="designerHost" style="margin: 20px 40px 20px 20px;"></div>
                             </div>
