Basic list style (#4)

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -36,7 +36,10 @@
                             <div id="designerHost" style="margin: 10px 30px 30px 10px;"></div>
                         </div>
                         <div id="treeViewVerticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                        <div id="treeViewSheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
+                        <div id="treeViewSheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto;">
+                            <nav class="treeViewSheetHost__header">Visual tree view</nav>
+                            <section class="treeview"></section>
+                        </div>
                         <div id="propertyVerticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
                         <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
                     </div>
