Added copy to clipboard functionality (#9)
* Added copy to clipboard functionality

* Removed Add New Card button from HTML

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -21,9 +21,10 @@
                 <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
             </div>
             <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2; padding: 0 20px 0 20px;">
+                <div class="toolbar-btn toolbar-btn__icon-card" title="Start a new card from scratch">Enter Full Screen</div>
                 <span style="color: black;">Host:</span>
                 <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
-                <div id="btnNewCard" class="toolbar-button toolbar-icon-card" title="Start a new card from scratch">New card</div>
+                <div class="toolbar-btn toolbar-btn__icon-card js-copy-json" title="Start a new card from scratch">Copy JSON</div>
             </div>
             <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
                 <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto;">
