--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -21,13 +21,13 @@
                 <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
             </div>
             <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2; padding: 0 20px 0 20px;">
-                <div class="toolbar-btn toolbar-btn__icon-card" title="Start a new card from scratch">Enter Full Screen</div>
+                <div class="toolbar-btn toolbar-btn__icon-card js-enter-fullscreen" title="Start a new card from scratch">Enter Full Screen</div>
                 <span style="color: black;">Host:</span>
                 <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
                 <div class="toolbar-btn toolbar-btn__icon-card js-copy-json" title="Start a new card from scratch">Copy JSON</div>
             </div>
             <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
-                <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto;">
+                <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto; background-color: #F9F9F9;">
                     <div id="toolPalette"></div>
                 </div>
 
@@ -48,7 +48,7 @@
                             <section class="treeview"></section>
                         </div>
                         <div id="propertyVerticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                        <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
+                        <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px; background-color: #F9F9F9;"></div>
                     </div>
                     <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
                     <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
