--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -27,8 +27,15 @@
                 <div class="toolbar-btn toolbar-btn__icon-copy js-copy-json">Copy JSON</div>
             </div>
             <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
-                <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto; background-color: #F9F9F9;">
-                    <div id="toolPalette"></div>
+                <div class="aside">
+                    <nav class="aside-menu">
+                        <span class="aside-menu__title">Visual tree view</span>
+                        <span class="aside-menu__bullet">
+                            <span class="aside-menu__icon"></span>
+                            <span class="aside-menu__description">Hide</span>
+                        </span>
+                    </nav>
+                    <ul class="aside-items"></ul>
                 </div>
 
                 <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
