--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -29,7 +29,7 @@
             <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
                 <div class="aside">
                     <nav class="aside-menu">
-                        <span class="aside-menu__title">Visual tree view</span>
+                        <span class="aside-menu__title">Tool box</span>
                         <span class="aside-menu__bullet">
                             <span class="aside-menu__icon"></span>
                             <span class="aside-menu__description">Hide</span>
