Fix/history review (#26)
* Changed navbar text

* Added JSON Title

* Added icon when fullscreen

* Removed unnecesary sanitizeName functionality

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2;">
             <div class="toolbar-btn toolbar-btn__icon-fullscreen js-enter-fullscreen">Enter Full Screen</div>
-            <span style="color: black;">Host:</span>
+            <span style="color: black;">Select Host App:</span>
             <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
             <div class="toolbar-btn toolbar-btn__icon-copy js-copy-json">Copy JSON</div>
         </div>
